H2: Add more tested outputs
Test salaries of 78450 and 112000. Provide output in output comment section.